# viteplus

./: .clippy.toml  .gitignore  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  MAINTENANCE.md  README.md  justfile  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vercel.json  vite.config.ts  zbpack.json
.cargo/: config.toml
.claude/skills/bump-vite-task/: SKILL.md
.github/: renovate.json
.github/actions/build-upstream/: action.yml
.github/actions/clone/: action.yml
.github/actions/download-rolldown-binaries/: action.yml
.github/actions/set-snapshot-version/: action.yml
.github/scripts/: update-node-release-keys.sh  upgrade-deps.mjs  upgrade-deps.ts
.github/workflows/: ci.yml  deny.yml  deploy-docs-preview.yml  deploy-docs.yml  e2e-test.yml  issue-close-require.yml  issue-labeled.yml  prepare_release.yml  publish-to-pkg.pr.new.yml  release.yml  renovate-lockfiles.yml  reusable-release-build.yml  security.yml  test-standalone-install.yml  test-vp-create.yml  update-node-release-keys.yml  update-trusted-stack-stats.yml  upgrade-deps.yml  zizmor.yml
bench/: Cargo.toml  generate-monorepo.ts
bench/benches/: workspace_load.rs
crates/vite_command/: Cargo.toml
crates/vite_command/src/: lib.rs  ps1_shim.rs
crates/vite_error/: Cargo.toml
crates/vite_error/src/: lib.rs
crates/vite_global_cli/: Cargo.toml
crates/vite_global_cli/src/: cli.rs  error.rs  help.rs  js_executor.rs  main.rs  upgrade_check.rs
crates/vite_global_cli/src/commands/: implode.rs  mod.rs  shell.rs  update.rs  version.rs  vpx.rs
crates/vite_global_cli/src/commands/env/: config.rs  current.rs  doctor.rs  exec.rs  global_install.rs  mod.rs  package_metadata.rs  pin.rs  setup.rs  unpin.rs  use.rs  which.rs
crates/vite_global_cli/src/commands/global/: install.rs  mod.rs  outdated.rs  packages.rs
crates/vite_global_cli/src/commands/upgrade/: mod.rs
crates/vite_global_cli/src/shim/: corepack.rs  dispatch.rs  mod.rs
crates/vite_global_cli/src/tips/: mod.rs  short_aliases.rs  use_vpx_or_run.rs
crates/vite_install/: Cargo.toml
crates/vite_install/src/: config.rs  lib.rs  main.rs  package_manager.rs  request.rs
crates/vite_install/src/commands/: add.rs  approve_builds.rs  audit.rs  cache.rs  config.rs  dist_tag.rs  dlx.rs  install.rs  list.rs  login.rs  logout.rs  mod.rs  outdated.rs  owner.rs  pack.rs  plugin.rs  prune.rs  publish.rs  rebuild.rs  remove.rs  stage.rs  update.rs  view.rs  whoami.rs  why.rs
crates/vite_installer/: Cargo.toml  build.rs
crates/vite_installer/src/: cli.rs  main.rs  windows_path.rs
crates/vite_js_runtime/: Cargo.toml
crates/vite_js_runtime/src/: cache.rs  dev_engines.rs  download.rs  error.rs  lib.rs  pgp_verify.rs  platform.rs  provider.rs  runtime.rs
crates/vite_js_runtime/src/assets/: node-release-keys.asc
crates/vite_js_runtime/src/assets/test/: SHASUMS256-v16.20.0.txt.asc  SHASUMS256-v18.14.0.txt.asc  SHASUMS256-v20.18.0.txt.asc  SHASUMS256-v22.13.1.txt.asc
crates/vite_js_runtime/src/providers/: node.rs
crates/vite_migration/: Cargo.toml
crates/vite_migration/src/: ast_grep.rs  eslint.rs  file_walker.rs  import_rewriter.rs  lib.rs  package.rs  prettier.rs  script_rewrite.rs  vite_config.rs
crates/vite_pm_cli/: Cargo.toml
crates/vite_pm_cli/src/: cli.rs  dispatch.rs  error.rs  handlers.rs  helpers.rs  lib.rs
crates/vite_setup/: Cargo.toml
crates/vite_setup/src/: error.rs  install.rs  integrity.rs  lib.rs  platform.rs  registry.rs
crates/vite_shared/: Cargo.toml
crates/vite_shared/src/: env_config.rs  env_vars.rs  error.rs  header.rs  home.rs  http.rs  json_edit.rs  lib.rs  output.rs  package_json.rs  path_env.rs  tracing.rs
crates/vite_static_config/: Cargo.toml
crates/vite_static_config/src/: lib.rs
crates/vite_trampoline/: Cargo.toml
docs/: index.md  package.json  pnpm-lock.yaml  team.md
docs/.vitepress/: config.mts  tsconfig.json
docs/.vitepress/theme/: Layout.vue  index.ts
docs/.vitepress/theme/components/: CopyPrompt.vue  Footer.vue
docs/.vitepress/theme/components/home/: CoreFeature3Col.vue  FeatureCheck.vue  FeatureDevBuild.vue  FeaturePack.vue  FeatureRun.vue  FeatureRunTerminal.vue  FeatureTest.vue  FeatureToolbar.vue  Fullstack2Col.vue  HeadingSection2.vue  HeadingSection3.vue  HeadingSection4.vue  Hero.vue  InstallCommand.vue  ProductivityGrid.vue  Testimonials.vue
docs/.vitepress/theme/data/: feature-run-transcripts.ts  fetch-trusted-stack-stats.ts  terminal-transcripts.ts  trusted-stack-stats.json  trusted-stack-stats.ts  trusted-stack-stats.types.ts
docs/_data/: team.js  team.ts
docs/config/: build.md  create.md  fmt.md  index.md  lint.md  pack.md  run.md  staged.md  test.md
docs/guide/: build.md  cache.md  check.md  ci.md  commit-hooks.md  create.md  dev.md  env.md  fmt.md  ide-integration.md  implode.md  index.md  install.md  lint.md  migrate.md  monorepo.md  pack.md  run.md  test.md  troubleshooting.md  upgrade.md  vpx.md  why.md
ecosystem-ci/: patch-project.ts  repo.json  verify-install.ts
rfcs/: add-remove-package-commands.md  approve-builds-command.md  check-command.md  cli-output-polish.md  cli-tips.md  code-generator.md  config-and-staged-commands.md  create-org-default-templates.md  dedupe-package-command.md  dev-engines.md  env-command.md  global-cli-rust-binary.md  install-command.md  js-runtime.md  link-unlink-package-commands.md  merge-global-and-local-cli.md  migration-command.md  outdated-package-command.md  package-manager-detection.md  pm-command-group.md  stage-command.md  trampoline-exe-for-shims.md  update-package-command.md  upgrade-check.md  upgrade-command.md  verify-node-shasums-signature.md  why-package-command.md  windows-installer.md
scripts/: generate-license.ts
