[workspace]
resolver = "3"
members = ["bench", "crates/*", "packages/cli/binding"]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
license = "BUSL-1.1"
rust-version = "1.88.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
tail_expr_drop_order = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
backon = "1.3.0"
bincode = "2.0.1"
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "std"] }
clap = "4.5.40"
criterion = { version = "0.7", features = ["html_reports"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
flate2 = "1.0.35"
futures-util = "0.3.31"
hex = "0.4.3"
httpmock = "0.7"
indoc = "2.0.5"
nix = { version = "0.30.1", features = ["dir"] }
pathdiff = "0.2.3"
petgraph = "0.8.2"
reqwest = { version = "0.12", default-features = false }
rusqlite = "0.37.0"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yml = "0.0.12"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
tar = "0.4.43"
tempfile = "3.14.0"
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2"
tokio = "1.46.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
vite_error = { path = "crates/vite_error" }
vite_glob = { git = "https://github.com/voidzero-dev/vite-task", rev = "c615ca66039e48b4a31d54fd0f1672c08d255e78" }
vite_install = { path = "crates/vite_install" }
vite_path = { git = "https://github.com/voidzero-dev/vite-task", rev = "c615ca66039e48b4a31d54fd0f1672c08d255e78" }
vite_str = { git = "https://github.com/voidzero-dev/vite-task", rev = "c615ca66039e48b4a31d54fd0f1672c08d255e78" }
vite_task = { git = "https://github.com/voidzero-dev/vite-task", rev = "c615ca66039e48b4a31d54fd0f1672c08d255e78" }
vite_workspace = { git = "https://github.com/voidzero-dev/vite-task", rev = "c615ca66039e48b4a31d54fd0f1672c08d255e78" }
wax = "0.6.0"

napi = { version = "3.0.0", default-features = false, features = ["async", "error_anyhow"] }
napi-build = "2"
napi-derive = { version = "3.0.0", default-features = false, features = ["type-def", "strict"] }

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.
