[workspace]
resolver = "3"
members = ["bench", "crates/*", "packages/cli/binding"]

[workspace.metadata.cargo-shear]
ignored = [
  # These workspace dependencies are used by rolldown crates, not our local crates
  "css-module-lexer",
  "html5gum",
  "prettyplease",
  "proc-macro2",
  "quote",
  "rolldown_filter_analyzer",
  "rolldown_plugin_vite_asset",
  "rolldown_plugin_vite_asset_import_meta_url",
  "rolldown_plugin_vite_css",
  "rolldown_plugin_vite_css_post",
  "rolldown_plugin_vite_html",
  "rolldown_plugin_vite_html_inline_proxy",
  "string_cache",
  "syn",
]

[workspace.package]
authors = ["Vite+ Authors"]
edition = "2024"
homepage = "https://github.com/voidzero-dev/vite-plus"
license = "MIT"
repository = "https://github.com/voidzero-dev/vite-plus"
rust-version = "1.92.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
non_ascii_idents = "warn"
unit-bindings = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"
unused_must_use = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# restriction
dbg_macro = "warn"
todo = "allow"
unimplemented = "allow"
print_stdout = "warn"
print_stderr = "allow"
allow_attributes = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
# Allow lints that currently fire across the workspace (vite-plus + rolldown).
# Re-enable selectively as code is cleaned up.
assertions_on_constants = "allow"
assigning_clones = "allow"
bool_to_int_with_if = "allow"
borrow_deref_ref = "allow"
branches_sharing_code = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_if = "allow"
default_trait_access = "allow"
derivable_impls = "allow"
doc_link_with_quotes = "allow"
doc_markdown = "allow"
double_ended_iterator_last = "allow"
double_must_use = "allow"
empty_line_after_doc_comments = "allow"
enum_variant_names = "allow"
equatable_if_let = "allow"
fallible_impl_from = "allow"
fn_params_excessive_bools = "allow"
format_push_string = "allow"
future_not_send = "allow"
if_not_else = "allow"
ignore_without_reason = "allow"
implicit_clone = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
iter_with_drain = "allow"
let_and_return = "allow"
literal_string_with_formatting_args = "allow"
manual_contains = "allow"
manual_let_else = "allow"
manual_string_new = "allow"
manual_strip = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
needless_borrow = "allow"
needless_collect = "allow"
needless_continue = "allow"
needless_for_each = "allow"
needless_lifetimes = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
needless_return = "allow"
new_without_default = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
overly_complex_bool_expr = "allow"
print_literal = "allow"
ptr_arg = "allow"
redundant_clone = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pub_crate = "allow"
ref_option = "allow"
semicolon_if_nothing_returned = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
single_char_pattern = "allow"
single_match = "allow"
single_match_else = "allow"
single_option_map = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_long_first_doc_paragraph = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
trailing_empty_array = "allow"
trivially_copy_pass_by_ref = "allow"
type_complexity = "allow"
uninlined_format_args = "allow"
unnecessary_struct_initialization = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unused_async = "allow"
unused_self = "allow"
use_self = "allow"
used_underscore_binding = "allow"
useless_conversion = "allow"
useless_format = "allow"
useless_let_if_seq = "allow"
useless_vec = "allow"
wrong_self_convention = "allow"

[workspace.dependencies]
anyhow = "1.0.98"
append-only-vec = "0.1.7"
arcstr = { version = "1.2.0", default-features = false }
ariadne = { package = "rolldown-ariadne", version = "0.6.0" }
ast-grep-config = "0.40.1"
ast-grep-core = "0.40.1"
ast-grep-language = { version = "0.40.1", default-features = false, features = [
  "tree-sitter-bash",
  "tree-sitter-typescript",
] }
async-channel = "2.3.1"
async-scoped = "0.9.0"
async-trait = "0.1.89"
backon = "1.3.0"
base-encode = "0.3.1"
base64-simd = "0.8.0"
bincode = "2.0.1"
bstr = { version = "1.12.0", default-features = false, features = ["alloc", "std"] }
bitflags = "2.9.1"
brush-parser = "0.3.0"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5.40"
clap_complete = "4.6.0"
commondir = "1.0.0"
cow-utils = "0.1.3"
criterion = { version = "0.7", features = ["html_reports"] }
criterion2 = { version = "3.0.0", default-features = false }
crossterm = { version = "0.29.0", features = ["event-stream"] }
css-module-lexer = "0.0.15"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["debug"] }
directories = "6.0.0"
dunce = "1.0.5"
fast-glob = "1.0.0"
flate2 = { version = "=1.1.9", features = ["zlib-rs"] }
form_urlencoded = "1.2.1"
fspy = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.2"
heck = "0.5.0"
hex = "0.4.3"
html5gum = "0.8.1"
httpmock = "0.7"
ignore = "0.4"
indicatif = "0.18"
indexmap = "2.9.0"
indoc = "2.0.5"
infer = "0.19.0"
insta = "1.43.1"
itertools = "0.14.0"
itoa = "1.0.15"
json-escape-simd = "3"
json-strip-comments = "3"
jsonschema = { version = "0.46.0", default-features = false }
junction = "1.4.1"
memchr = "2.7.4"
mimalloc-safe = "0.1.52"
mime = "0.3.17"
napi = { version = "3.0.0", default-features = false, features = [
  "async",
  "error_anyhow",
  "anyhow",
  "tracing",
  "object_indexmap",
] }
napi-build = "2"
napi-derive = { version = "3.0.0", default-features = false, features = [
  "type-def",
  "strict",
  "tracing",
] }
nix = { version = "0.30.1", features = ["dir"] }
nodejs-built-in-modules = "1.0.0"
nom = "8.0.0"
num-bigint = "0.4.6"
num-format = "0.4"
num_cpus = "1.17"
owo-colors = "4.2.2"
parking_lot = "0.12.5"
pathdiff = "0.2.3"
path-posix = "0.0.1"
pnp = "0.12.7"
percent-encoding = "2.3.1"
petgraph = "0.8.2"
pretty_assertions = "1.4.1"
phf = "0.13.0"
prettyplease = "0.2.32"
proc-macro2 = "1"
quote = "1"
rayon = "1.10.0"
regex = "1.11.1"
regress = "0.11.0"
reqwest = { version = "0.13", default-features = false }
rolldown-notify = "10.2.0"
rolldown-notify-debouncer-full = "0.7.5"
ropey = "1.6.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rustc-hash = "2.1.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars = "1.0.0"
self_cell = "1.2.0"
node-semver = "2.2.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde_yml = "0.0.12"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
simdutf8 = "0.1.5"
string_cache = "0.9.0"
sugar_path = { version = "2.0.1", features = ["cached_current_dir"] }
syn = { version = "2", default-features = false }
tar = "0.4.43"
tempfile = "3.14.0"
terminal_size = "0.4.2"
test-log = { version = "0.2.18", features = ["trace"] }
testing_macros = "1.0.0"
thiserror = "2"
tokio = { version = "1.48.0", default-features = false }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
  "serde",
  "std",
] }
ts-rs = "12.0"
typedmap = "0.6.0"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = "1.17.0"
vfs = "0.13.0"
vite_command = { path = "crates/vite_command" }
vite_error = { path = "crates/vite_error" }
vite_js_runtime = { path = "crates/vite_js_runtime" }
vite_glob = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
vite_install = { path = "crates/vite_install" }
vite_migration = { path = "crates/vite_migration" }
vite_pm_cli = { path = "crates/vite_pm_cli" }
vite_setup = { path = "crates/vite_setup" }
vite_shared = { path = "crates/vite_shared" }
vite_static_config = { path = "crates/vite_static_config" }
vite_path = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
vite_powershell = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
vite_str = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
vite_task = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
vite_workspace = { git = "https://github.com/voidzero-dev/vite-task.git", rev = "c63db22ff0258e4e45f03205104838ab795161ac" }
walkdir = "2.5.0"
wax = "0.6.0"
which = "8.0.0"
winreg = "0.56.0"
xxhash-rust = "0.8.15"
zip = "7.2"

# oxc crates with the same version
oxc = { version = "0.128.0", features = [
  "ast_visit",
  "transformer",
  "minifier",
  "mangler",
  "semantic",
  "codegen",
  "serialize",
  "isolated_declarations",
  "regular_expression",
  "cfg",
] }
oxc_allocator = { version = "0.128.0", features = ["pool"] }
oxc_ast = "0.128.0"
oxc_ecmascript = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
oxc_napi = "0.128.0"
oxc_str = "0.128.0"
oxc_minify_napi = "0.128.0"
oxc_parser_napi = "0.128.0"
oxc_transform_napi = "0.128.0"
oxc_traverse = "0.128.0"

# oxc crates in their own repos
oxc_index = { version = "4", features = ["rayon", "serde"] }
oxc_resolver = { version = "11.19.1", features = ["yarn_pnp"] }
oxc_resolver_napi = { version = "11.19.1", default-features = false, features = ["yarn_pnp"] }
oxc_sourcemap = "6"

# rolldown crates
rolldown = { path = "./rolldown/crates/rolldown" }
rolldown_binding = { path = "./rolldown/crates/rolldown_binding" }
rolldown_common = { path = "./rolldown/crates/rolldown_common" }
rolldown_dev = { path = "./rolldown/crates/rolldown_dev" }
rolldown_dev_common = { path = "./rolldown/crates/rolldown_dev_common" }
rolldown_devtools = { path = "./rolldown/crates/rolldown_devtools" }
rolldown_devtools_action = { path = "./rolldown/crates/rolldown_devtools_action" }
rolldown_ecmascript = { path = "./rolldown/crates/rolldown_ecmascript" }
rolldown_ecmascript_utils = { path = "./rolldown/crates/rolldown_ecmascript_utils" }
rolldown_error = { path = "./rolldown/crates/rolldown_error" }
rolldown_filter_analyzer = { path = "./rolldown/crates/rolldown_filter_analyzer" }
rolldown_fs = { path = "./rolldown/crates/rolldown_fs" }
rolldown_fs_watcher = { path = "./rolldown/crates/rolldown_fs_watcher" }
rolldown_plugin = { path = "./rolldown/crates/rolldown_plugin" }
rolldown_plugin_asset_module = { path = "./rolldown/crates/rolldown_plugin_asset_module" }
rolldown_plugin_bundle_analyzer = { path = "./rolldown/crates/rolldown_plugin_bundle_analyzer" }
rolldown_plugin_chunk_import_map = { path = "./rolldown/crates/rolldown_plugin_chunk_import_map" }
rolldown_plugin_copy_module = { path = "./rolldown/crates/rolldown_plugin_copy_module" }
rolldown_plugin_data_url = { path = "./rolldown/crates/rolldown_plugin_data_url" }
rolldown_plugin_esm_external_require = { path = "./rolldown/crates/rolldown_plugin_esm_external_require" }
rolldown_plugin_hmr = { path = "./rolldown/crates/rolldown_plugin_hmr" }
rolldown_plugin_isolated_declaration = { path = "./rolldown/crates/rolldown_plugin_isolated_declaration" }
rolldown_plugin_lazy_compilation = { path = "./rolldown/crates/rolldown_plugin_lazy_compilation" }
rolldown_plugin_oxc_runtime = { path = "./rolldown/crates/rolldown_plugin_oxc_runtime" }
rolldown_plugin_replace = { path = "./rolldown/crates/rolldown_plugin_replace" }
rolldown_plugin_utils = { path = "./rolldown/crates/rolldown_plugin_utils" }
rolldown_plugin_vite_alias = { path = "./rolldown/crates/rolldown_plugin_vite_alias" }
rolldown_plugin_vite_asset = { path = "./rolldown/crates/rolldown_plugin_vite_asset" }
rolldown_plugin_vite_asset_import_meta_url = { path = "./rolldown/crates/rolldown_plugin_vite_asset_import_meta_url" }
rolldown_plugin_vite_build_import_analysis = { path = "./rolldown/crates/rolldown_plugin_vite_build_import_analysis" }
rolldown_plugin_vite_css = { path = "./rolldown/crates/rolldown_plugin_vite_css" }
rolldown_plugin_vite_css_post = { path = "./rolldown/crates/rolldown_plugin_vite_css_post" }
rolldown_plugin_vite_dynamic_import_vars = { path = "./rolldown/crates/rolldown_plugin_vite_dynamic_import_vars" }
rolldown_plugin_vite_html = { path = "./rolldown/crates/rolldown_plugin_vite_html" }
rolldown_plugin_vite_html_inline_proxy = { path = "./rolldown/crates/rolldown_plugin_vite_html_inline_proxy" }
rolldown_plugin_vite_import_glob = { path = "./rolldown/crates/rolldown_plugin_vite_import_glob" }
rolldown_plugin_vite_json = { path = "./rolldown/crates/rolldown_plugin_vite_json" }
rolldown_plugin_vite_load_fallback = { path = "./rolldown/crates/rolldown_plugin_vite_load_fallback" }
rolldown_plugin_vite_manifest = { path = "./rolldown/crates/rolldown_plugin_vite_manifest" }
rolldown_plugin_vite_module_preload_polyfill = { path = "./rolldown/crates/rolldown_plugin_vite_module_preload_polyfill" }
rolldown_plugin_vite_react_refresh_wrapper = { path = "./rolldown/crates/rolldown_plugin_vite_react_refresh_wrapper" }
rolldown_plugin_vite_reporter = { path = "./rolldown/crates/rolldown_plugin_vite_reporter" }
rolldown_plugin_vite_resolve = { path = "./rolldown/crates/rolldown_plugin_vite_resolve" }
rolldown_plugin_vite_transform = { path = "./rolldown/crates/rolldown_plugin_vite_transform" }
rolldown_plugin_vite_wasm_fallback = { path = "./rolldown/crates/rolldown_plugin_vite_wasm_fallback" }
rolldown_plugin_vite_web_worker_post = { path = "./rolldown/crates/rolldown_plugin_vite_web_worker_post" }
rolldown_resolver = { path = "./rolldown/crates/rolldown_resolver" }
rolldown_sourcemap = { path = "./rolldown/crates/rolldown_sourcemap" }
rolldown_std_utils = { path = "./rolldown/crates/rolldown_std_utils" }
rolldown_testing = { path = "./rolldown/crates/rolldown_testing" }
rolldown_testing_config = { path = "./rolldown/crates/rolldown_testing_config" }
rolldown_tracing = { path = "./rolldown/crates/rolldown_tracing" }
rolldown_utils = { path = "./rolldown/crates/rolldown_utils" }
rolldown_watcher = { path = "./rolldown/crates/rolldown_watcher" }
rolldown_workspace = { path = "./rolldown/crates/rolldown_workspace" }
string_wizard = { path = "./rolldown/crates/string_wizard", features = ["serde"] }

# =============================================================================
# Local Development Patches
# =============================================================================
# This section patches vite-task crates to use local paths for simultaneous
# vite-task and vite-plus development. When making changes to vite-task that
# affect vite-plus, this allows testing without publishing or pushing commits.
#
# To use: Ensure vite-task is cloned at ../vite-task relative to vite-plus.
# Comment out this section before committing.
# =============================================================================
# [patch."https://github.com/voidzero-dev/vite-task.git"]
# fspy = { path = "../vite-task/crates/fspy" }
# vite_glob = { path = "../vite-task/crates/vite_glob" }
# vite_path = { path = "../vite-task/crates/vite_path" }
# vite_powershell = { path = "../vite-task/crates/vite_powershell" }
# vite_str = { path = "../vite-task/crates/vite_str" }
# vite_task = { path = "../vite-task/crates/vite_task" }
# vite_workspace = { path = "../vite-task/crates/vite_workspace" }

[profile.dev]
# Disabling debug info speeds up local and CI builds,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
# Configurations explicitly listed here for clarity.
# Using the best options for performance.
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols" # set to `false` for debug information
debug = false # set to `true` for debug information
panic = "abort" # Let it crash and force ourselves to write safe Rust.

# The trampoline binary is copied per shim tool (~5-10 copies), so optimize for
# size instead of speed. This reduces it from ~200KB to ~100KB on Windows.
[profile.release.package.vite_trampoline]
opt-level = "z"

# The installer binary is downloaded by users, so optimize for size.
[profile.release.package.vite_installer]
opt-level = "z"
