[package]
name = "vite-plus-benches"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
criterion = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
vite_path = { workspace = true }
vite_str = { workspace = true }
vite_task = { workspace = true }

[[bench]]
name = "workspace_load"
harness = false

[lints]
workspace = true
