[package]
name = "vite_error"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
ast-grep-config = { workspace = true }
bincode = { workspace = true }
bstr = { workspace = true }
ignore = { workspace = true }
nix = { workspace = true }
rusqlite = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
vite_path = { workspace = true }
vite_str = { workspace = true }
vite_workspace = { workspace = true }
wax = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { workspace = true, features = ["stream", "native-tls-vendored", "json"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { workspace = true, features = ["stream", "rustls-no-provider", "json"] }

[lib]
test = false
doctest = false

[lints]
workspace = true
