[package]
name = "vite_js_runtime"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
backon = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
hex = { workspace = true }
node-semver = { workspace = true }
pgp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
vite_path = { workspace = true }
vite_shared = { workspace = true }
vite_str = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { workspace = true, features = ["stream", "native-tls-vendored"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
reqwest = { workspace = true, features = ["stream", "rustls-no-provider"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
